--- a/.github/workflows/publish-chart.yml
+++ b/.github/workflows/publish-chart.yml
@@ -19,8 +19,8 @@ jobs:
 
       - name: Package Helm chart
         run: |
-          helm package class05/mychart
-          helm repo index . --url https://${{ github.repository_owner }}.github.io/${{ github.event.repository.name }}
+          helm package class05/mychart -d chart-output
+          helm repo index chart-output --url https://${{ github.repository_owner }}.github.io/${{ github.event.repository.name }}
 
       - name: Push to gh-pages branch
         uses: peaceiris/actions-gh-pages@v3
