Add force_orphan to fix gh-pages push

--- a/.github/workflows/publish-chart.yml
+++ b/.github/workflows/publish-chart.yml
@@ -29,3 +29,4 @@ jobs:
           publish_dir: chart-output
           publish_branch: gh-pages
           force_orphan: true
+          external_repository: ${{ github.repository }}
